# Babel

./: .gitignore  CMakeLists.txt  DiagrammeClientSide.puml  DiagrammeServerSide.puml  GUIClientSide.puml  README.md  c1.txt  c2.txt  clean_cmake.sh  conanfile.txt  install.sh  output.txt  run_client.sh
client/include/: BabelClient.hpp  structs.hpp
client/include/GUI/pages/: APage.hpp  CallPage.hpp  ContactPage.hpp  LoginPage.hpp  NextPage.hpp  PageManager.hpp  RegisterPage.hpp
client/include/Network/: ITcpClient.hpp
client/include/pages/: APage.hpp  BabelClient.hpp  ContactPage.hpp  LoginPage.hpp  Loginpage.hpp  MainWindow.hpp  PageManager.hpp
client/src/: APage.cpp  BabelClient.cpp  ContactPage.cpp  LoginPage.cpp  MainWindow.cpp  main.cpp
client/src/GUI/: MainWindow.cpp
client/src/GUI/pages/: APage.cpp  CallPage.cpp  ContactPage.cpp  LoginPage.cpp  NextPage.cpp  PageManager.cpp  RegisterPage.cpp
doc/: Client.puml  ClientSide.puml  DiagrammeClientSide.puml  DiagrammeServerSide.puml  GUIClientSide.puml  LibServer.puml  NetworkClientSide.puml  Serveur.puml  Sound.puml
include/: API.hpp
include/DLLoader/: DLLoader.hpp
include/Parser/: ConfigFileParser.hpp
include/Server/: ITcpConnection.hpp  ITcpServer.hpp
include/Server/DB/: IDatabase.hpp
include/Sound/: CircularBuffer.hpp  DecodedSound.hpp  EncodedSound.hpp  IEncodeManager.hpp  ISoundManager.hpp
include/SoundLib/: PortAudioManager.hpp
include/WindowsEquivalent/: Bdirent.h  Bunistd.h
include/client/: BabelClient.hpp  structs.cpp  structs.hpp
include/client/Commands/: CallManager.hpp  CommandParser.hpp  CommandsFactory.hpp  ICommand.hpp
include/client/GUI/: MainWindow.hpp
include/client/GUI/pages/: APage.hpp  CallPage.hpp  ContactPage.hpp  LoginPage.hpp  NextPage.hpp  PageManager.hpp  RegisterPage.hpp
include/client/Network/: ITcpClient.hpp  IUdpClient.hpp  TcpClient.hpp  UdpClient.hpp
include/server/: Commands.hpp  UserManager.hpp
includes/: class.hpp
includes/server/: Commands.hpp  ContactManager.hpp  Database.hpp  IDatabase.hpp  ITcpConnection.hpp  ITcpServer.hpp  TcpConnection.hpp  TcpServer.hpp  UserManager.hpp  class.hpp
lib/: configFile.babel
lib/Encode/: CMakeLists.txt  DecodedSound.hpp  EncodedSound.hpp  IEncodeManager.hpp  OpusManager.cpp  OpusManager.hpp
lib/Encode/Exception/: Error.cpp  OpusException.hpp
lib/Server/: AAsioTcpConnection.hpp  AsioTcpConnection.cpp  AsioTcpConnection.hpp  AsioTcpServer.cpp  AsioTcpServer.hpp  CMakeLists.txt  ClientManager.cpp  ClientManager.hpp  Commands.cpp  Commands.hpp  CommandsManager.cpp  CommandsManager.hpp  ContactManager.cpp  ContactManager.hpp  ITcpConnection.hpp  ITcpServer.hpp  MessageManager.cpp  MessageManager.hpp  UserManager.cpp  UserManager.hpp
lib/Server/DB/: Database.cpp  Database.hpp
lib/Sound/: CMakeLists.txt  CircularBuffer.cpp  DecodedSound.cpp  ISoundManager.hpp  PortAudioManager.cpp  PortAudioManager.hpp
lib/Sound/Exception/: Error.cpp  Error.hpp  PortAudioException.hpp
scripts/: debug_client.sh  install.sh  run_client.sh  run_server.sh
src/: main.cpp  portAduoMain.cpp  portAudioMain.cpp  record_mic.cpp
src/Exception/: ClientError.hpp  FileException.hpp  LibException.hpp
src/Exception/Error/: Error.hpp
src/Parser/: ConfigFileParser.cpp
src/Server/: UserManager.cpp
src/Sound/: CircularBuffer.cpp  DecodedSound.cpp  EncodedSound.cpp
src/client/: BabelClient.cpp  main.cpp  mainnetwork.cpp  structs.cpp
src/client/Commands/: CallManager.cpp  CommandsFactory.cpp
src/client/GUI/: MainWindow.cpp
src/client/GUI/pages/: APage.cpp  CallPage.cpp  ContactPage.cpp  LoginPage.cpp  PageManager.cpp  RegisterPage.cpp
src/client/Network/: ITcpClient.hpp  TcpClient.cpp  UdpClient.cpp
src/server/: Commands.cpp  ContactManager.cpp  Database.cpp  Server_client.cpp  Server_server.cpp  TcpConnection.cpp  TcpServer.cpp  UserManager.cpp  main.cpp
